# annotated_word2vec

./: .gitignore  CMakeLists.txt  README.md  vocab.txt  word2vec.c  word2vec_train_explained.ipynb
